Batch 1 fixes: Reset filters scope, button styling, legend text improvements
- Reset Filters now only resets cancer type, subtype, mutation, and hotspot filters
- Reset Filters button now has outline style (not red)
- Reset Axes button now has outline style
- Changed Gene Effect options from '+/−' and '|GE|' to 'GE' and 'Absolute'
- Removed '(network)' and '(all genes)' from stats legend at bottom
- Fixed Gene Effect legend text in PNG/SVG exports

--- a/index.html
+++ b/index.html
@@ -1419,8 +1419,8 @@
                             </div>
                             <div id="colorGEOptions" style="display: none; margin-left: 20px; margin-bottom: 4px;">
                                 <div class="radio-group-inline">
-                                    <label><input type="radio" name="colorGEType" value="signed" checked> +/−</label>
-                                    <label><input type="radio" name="colorGEType" value="absolute"> |GE|</label>
+                                    <label><input type="radio" name="colorGEType" value="signed" checked> GE</label>
+                                    <label><input type="radio" name="colorGEType" value="absolute"> Absolute</label>
                                 </div>
                             </div>
                             <!-- Gene Statistics options (shown when stats loaded) -->
@@ -1654,7 +1654,7 @@
                                     <input type="number" id="scatterYmax" step="0.1">
                                 </div>
                             </div>
-                            <button class="btn btn-secondary btn-sm" id="resetAxes" style="width: 100%; margin-top: 8px;">Reset</button>
+                            <button class="btn btn-outline btn-sm" id="resetAxes" style="width: 100%; margin-top: 8px;">Reset</button>
                         </div>
 
                         <!-- Aspect Ratio -->
@@ -1699,9 +1699,9 @@
                             <p style="font-size: 10px; color: #666; margin: 4px 0 0 0;">Stratify correlation by cancer type or mutation</p>
                         </div>
 
-                        <!-- Reset All Filters -->
+                        <!-- Reset Filters -->
                         <div class="control-box-compact">
-                            <button class="btn btn-outline btn-sm" id="resetAllFilters" style="width: 100%; border-color: #dc2626; color: #dc2626;">Reset All Filters</button>
+                            <button class="btn btn-outline btn-sm" id="resetAllFilters" style="width: 100%;">Reset Filters</button>
                         </div>
 
                         <!-- Highlight Cell Lines -->
