Batch 3: Network interaction, layout, textarea fixes
- Network: Double-click opens Gene Effect (node) or Inspect (edge)
- Network: Add 'Remove Mode' toggle - when active, clicking removes nodes
- Network: Simplified layout button (Force/Hierarchical only, removed problematic repulsion)
- Network: Shortened button labels (Lock, Layout)
- Textarea: Tab key now inserts tab character instead of changing focus
- Stats: Auto-load manual stats when Run is clicked (Load Stats button still works for preview)
- SVG export: Note - uses manual rendering, may differ from PNG which uses canvas capture

--- a/index.html
+++ b/index.html
@@ -1455,6 +1455,7 @@
                             <div class="button-group-horizontal" style="margin-bottom: 4px;">
                                 <button class="btn btn-secondary" id="fitNetwork">Fit</button>
                                 <button class="btn btn-secondary" id="showHiddenNodes">Show Hidden</button>
+                                <button class="btn btn-secondary" id="toggleRemoveMode">Remove Mode</button>
                                 <button class="btn btn-secondary" id="togglePhysics">Lock</button>
                                 <button class="btn btn-secondary" id="changeLayout">Layout</button>
                             </div>
