--- a/index.html
+++ b/index.html
@@ -1300,8 +1300,8 @@
                                 <label class="form-label">Enter Gene, LFC, FDR (tab or comma separated):</label>
                                 <textarea id="manualStatsTextarea" class="form-control" style="min-height: 140px; font-family: 'Roboto Mono', monospace; font-size: 11px;">Gene	LFC	FDR
 </textarea>
+                                <small style="color: #666; font-size: 10px;">Stats auto-loaded when you click Run</small>
                             </div>
-                            <button class="btn btn-outline btn-sm" id="loadManualStatsBtn">Load Stats</button>
                         </div>
 
                         <!-- File upload sub-panel -->
@@ -1459,7 +1459,7 @@
                                 <button class="btn btn-secondary" id="togglePhysics">Lock</button>
                                 <button class="btn btn-secondary" id="changeLayout">Layout</button>
                             </div>
-                            <p class="help-text" style="font-size: 9px; margin-bottom: 6px;">Double-click node to hide</p>
+                            <p class="help-text" id="networkHelpText" style="font-size: 9px; margin-bottom: 6px;">Double-click: node → Gene Effect, edge → Inspect</p>
                             <label style="font-weight: 600; margin-bottom: 4px; display: block;">Export:</label>
                             <div class="button-group-horizontal">
                                 <button class="btn btn-secondary" id="downloadNetworkPNG">PNG</button>
